RESOLVED FIXED76001
CodeBlock.h declares too many things
https://bugs.webkit.org/show_bug.cgi?id=76001
Summary CodeBlock.h declares too many things
Filip Pizlo
Reported 2012-01-10 15:49:16 PST
Patch forthcoming.
Attachments
the patch (47.30 KB, patch)
2012-01-10 15:51 PST, Filip Pizlo
no flags
the patch (47.59 KB, patch)
2012-01-10 15:53 PST, Filip Pizlo
no flags
the patch (47.60 KB, patch)
2012-01-10 15:56 PST, Filip Pizlo
barraclough: review+
Filip Pizlo
Comment 1 2012-01-10 15:51:05 PST
Created attachment 121924 [details] the patch
Filip Pizlo
Comment 2 2012-01-10 15:53:42 PST
Created attachment 121926 [details] the patch Actually wrote a change log.
Filip Pizlo
Comment 3 2012-01-10 15:54:44 PST
WebKit Review Bot
Comment 4 2012-01-10 15:55:37 PST
Attachment 121924 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/CMakeLists.txt', u'S..." exit_code: 1 Source/JavaScriptCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Source/JavaScriptCore/bytecode/CallLinkInfo.cpp:27: You should add a blank line after implementation file's own header. [build/include_order] [4] Total errors found: 2 in 19 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 5 2012-01-10 15:56:59 PST
Created attachment 121928 [details] the patch Fix style.
WebKit Review Bot
Comment 6 2012-01-10 15:58:22 PST
Attachment 121926 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/CMakeLists.txt', u'S..." exit_code: 1 Source/JavaScriptCore/bytecode/CallLinkInfo.cpp:27: You should add a blank line after implementation file's own header. [build/include_order] [4] Total errors found: 1 in 19 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 7 2012-01-10 16:19:35 PST
Note You need to log in before you can comment on or make changes to this bug.